# trading-ai

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: autopilot.yml  ci.yml  pages.yml
config/: default.yaml
docs/: README.md  app.js  index.html  manifest.json  service-worker.js  styles.css
notebooks/: 00_full_pipeline.ipynb  01_data_engine.ipynb  02_feature_engineering.ipynb  03_pattern_discovery.ipynb  04_strategy_generator.ipynb  05_validation.ipynb  06_ea_generator.ipynb  07_ai_feedback.ipynb  09_report.ipynb  10_kaggle_autopilot.ipynb
tests/: test_autopilot.py  test_data_engine.py  test_ea_generator.py  test_feature_engineering.py  test_feedback.py  test_multiple_testing.py  test_pattern_discovery.py  test_pipeline.py  test_reporting.py  test_strategy_generator.py  test_validation.py
trading_ai/: __init__.py  __main__.py  autopilot.py  config.py  persistence.py  pipeline.py
trading_ai/data_engine/: __init__.py  cleaner.py  loader.py  normalizer.py  resampler.py  sources.py  synthetic.py
trading_ai/ea_generator/: __init__.py  features_map.py  mql4.py  mql5.py  mql_common.py
trading_ai/feature_engineering/: __init__.py  candlestick.py  indicators.py  market_structure.py  registry.py
trading_ai/feedback/: __init__.py  analysis.py  optimizer.py
trading_ai/pattern_discovery/: __init__.py  clustering.py  labeling.py  metrics.py
trading_ai/reporting/: __init__.py  metrics.py  plots.py
trading_ai/strategy_generator/: __init__.py  backtest.py  risk.py
trading_ai/utils/: __init__.py  io.py  logging.py
trading_ai/validation/: __init__.py  monte_carlo.py  multiple_testing.py  robustness.py  walk_forward.py
